--- a/my-app/src/frontend/components/products/products.css
+++ b/my-app/src/frontend/components/products/products.css
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
     column-gap: 3rem;
     padding-left: 4rem;
-    padding-top:3rem;
+    margin-top: 3rem;
 }
 
 .img-card-container{
