--- a/my-app/src/frontend/components/products/products.css
+++ b/my-app/src/frontend/components/products/products.css
@@ -31,3 +31,11 @@
     width:12rem;
     background-color: var(--color-two);
 }
+
+.redColor{
+    color: var(--click-color);
+}
+
+.greyColor{
+   color: var(--border-color);
+}
