landing page added

--- a/my-app/src/frontend/pages/home/home.css
+++ b/my-app/src/frontend/pages/home/home.css
@@ -1,3 +1,24 @@
-.home-container{
-    padding-top:8rem;
+.landing-page-img{
+    padding-top:5.5rem;
+    width:50%;
+}
+
+.stacked-list-item {
+    border:solid 1px var(--color-two);
+    width:20rem;
+    height:4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--border-color);
+}
+
+.img-category-container{
+    display:flex;
+    padding-top:3rem;
+    column-gap: 6rem;
+}
+
+.list-container{
+padding-top:9rem;
 }
