--- a/src/frontend/components/footer/footer.css
+++ b/src/frontend/components/footer/footer.css
@@ -1,9 +1,11 @@
 .footer {
-    height: 8rem;
-    width:100%;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    column-gap: 4rem;
-    margin-top: 5rem;
+  position: absolute;
+  top: auto;
+  height: 8rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding-left: 8rem;
+  column-gap: 4rem;
+  margin: 5rem 0 0 12rem;
 }
