--- a/src/frontend/components/products/products.css
+++ b/src/frontend/components/products/products.css
@@ -1,41 +1,43 @@
 .main {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    column-gap: 3rem;
-    padding-left: 4rem;
-    margin-top: 3rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  column-gap: 3rem;
+  padding-left: 9rem;
+  margin-top: 3rem;
 }
 
-.img-card-container{
-    height:20rem;
-    width:14rem;
-    font-size:medium;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    border:none;
-    background-color: var(--background-color-one);
+.img-card-container {
+  height: 20rem;
+  width: 14rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  row-gap: 0.2rem;
+  border: none;
+  font-size: 0.85rem;
+  background-color: var(--background-color-one);
 }
 
 .img-container {
-    height:12rem;
-    width:12rem;
+  height: 12rem;
+  width: 12rem;
 }
 
 .img-card-container:hover {
-    box-shadow: 5px 5px 5px  var(--border-color), -5px -5px 5px  var(--border-color);
+  box-shadow: 5px 5px 5px var(--border-color), -5px -5px 5px var(--border-color);
 }
 
-.add-to-cart-btn{
-    width:12rem;
-    background-color: var(--color-two);
+.add-to-cart-btn {
+  border: none;
+  width: 12rem;
+  background-color: var(--color-two);
 }
 
-.redColor{
-    color: var(--click-color);
+.redColor {
+  color: var(--click-color);
 }
 
-.greyColor{
-   color: var(--border-color);
+.greyColor {
+  color: var(--border-color);
 }
