--- a/src/frontend/pages/home/home.css
+++ b/src/frontend/pages/home/home.css
@@ -1,25 +1,81 @@
+html {
+  overflow-x: hidden;
+}
+
+.shop_now_banner {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  position: absolute;
+  top: 24rem;
+  width: 100rem;
+  height: 18rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 7rem;
+  font-family: sans-serif;
+}
+
+.shop_now_banner:hover {
+  text-decoration: underline 5px;
+}
+
 .landing-page-img {
-  padding-top: 5.5rem;
-  width: 50%;
+  padding-top: 10rem;
+  width: 100rem;
+  height: 32rem;
+  position: relative;
 }
 
 .stacked-list-item {
-  border: solid 1px var(--color-two);
-  width: 20rem;
-  height: 4rem;
+  /* border: solid 1px var(--color-two); */
+  /* width: 20rem; */
+  /* height: 4rem; */
+  /* padding: 3rem; */
   display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--border-color);
+  width: 18rem;
+  height: fit-content;
+  position: relative;
+  /* align-items: center;
+  justify-content: center; */
+  /* background-color: var(--border-color); */
   cursor: pointer;
 }
 
 .img-category-container {
   display: flex;
-  padding-top: 3rem;
   column-gap: 6rem;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .list-container {
-  padding-top: 9rem;
+  display: flex;
+  column-gap: 0.7rem;
+  padding-top: 2rem;
+  flex-wrap: wrap;
+  margin-left: 1rem;
+}
+
+.shop_category_banner {
+  background-color: black;
+  color: white;
+  width: 100rem;
+  display: flex;
+  justify-content: center;
+  padding: 2px;
+  z-index: 2;
+}
+
+.category_img {
+  width: 18rem;
+  height: 22rem;
+}
+
+.category_name {
+  position: absolute;
+  top: -1.1rem;
+  left: 6rem;
+  font-weight: 700;
+  z-index: 3;
 }
