--- a/src/frontend/pages/login/login.css
+++ b/src/frontend/pages/login/login.css
@@ -1,32 +1,43 @@
-.login-container {
-    padding-top:8rem;
-    margin-left:28rem;
-    display: flex;
-    flex-direction: column;
-    row-gap:1rem; 
+.login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 12rem;
 }
 
+.login-container {
+  display: flex;
+  width: 20rem;
+  height: 25rem;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 1rem;
+  padding: 0.5rem;
+  border-radius: 5px;
+  background-color: rgb(0, 0, 0, 0.15);
+}
 
 .user-input {
-    width:22rem;
-    border-radius: 10px;
+  width: 18rem;
+  height: 0.5rem;
+  border-radius: 5px;
 }
 
 .login-btn {
-    background-color: var(--color-two);
-    color:var(--background-color-one);
-    width:23rem;
-    border-radius: 10px;
-    cursor: pointer;
-    height:2rem;
+  background-color: var(--color-two);
+  color: var(--background-color-one);
+  width: 19rem;
+  border-radius: 6px;
+  cursor: pointer;
+  height: 2rem;
+  border: none;
 }
 
 .need-account {
-    font-size: 0.9rem;
+  font-size: 0.9rem;
 }
 
-.error-msg{
-    color:var(--click-color);
-    transform: translate(500px, 30px);
+.error-msg {
+  color: var(--click-color);
+  /* transform: translate(500px, 30px); */
 }
-
