--- a/src/frontend/pages/signup/signup.css
+++ b/src/frontend/pages/signup/signup.css
@@ -1,41 +1,49 @@
-.signup-container{
-    padding-top: 8rem;
-    margin-left: 28rem;
-    display: flex;
-    flex-direction: column;
-    row-gap: 1rem;
-  }
+.signup {
+  display: flex;
+  padding-top: 5rem;
+  justify-content: center;
+}
 
-  .name-input {
-      width:10rem;
-      border-radius: 10px;
-    }
-  
-    .user-input {
-        width:22rem;
-        border-radius: 10px;
-    }
-  
-    .input-name-label {
-        display:flex;
-        column-gap:1rem;
-    }
-  
-    .first-name,.last-name{
-        display: flex;
-        flex-direction: column;
-    }
-  
-    .sign-up-btn {
-        background-color:var(--color-two);
-        color:var(--background-color-one);
-        width:23rem;
-        border-radius: 10px;
-        cursor: pointer;
-        height:2rem;
-    }
-  
-    .already-user  {
-        font-size: 0.9rem;
-    }
+.signup-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  margin: 5rem;
+  width: 20rem;
+  height: 30rem;
+  row-gap: 1rem;
+  border-radius: 5px;
+  background-color: rgb(0, 0, 0, 0.15);
+}
 
+.name-input {
+  width: 8rem;
+  border-radius: 5px;
+  height: 0.5rem;
+}
+
+.input-name-label {
+  display: flex;
+  column-gap: 1rem;
+}
+
+.first-name,
+.last-name {
+  display: flex;
+  flex-direction: column;
+}
+
+.sign-up-btn {
+  background-color: var(--color-two);
+  color: var(--background-color-one);
+  width: 19rem;
+  border-radius: 6px;
+  cursor: pointer;
+  height: 2rem;
+  border: none;
+}
+
+.already-user {
+  font-size: 0.9rem;
+}
