--- a/src/frontend/pages/signup/signup.css
+++ b/src/frontend/pages/signup/signup.css
@@ -1,26 +1,11 @@
-.signup {
-  display: flex;
-  padding-top: 5rem;
-  justify-content: center;
-}
-
 .signup-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1rem;
-  margin: 5rem;
-  width: 20rem;
-  height: 30rem;
-  row-gap: 1rem;
-  border-radius: 5px;
-  background-color: rgb(0, 0, 0, 0.15);
+  height: 29rem;
 }
 
 .name-input {
   width: 8rem;
   border-radius: 5px;
-  height: 0.5rem;
+  height: 1.5rem;
 }
 
 .input-name-label {
@@ -32,18 +17,9 @@
 .last-name {
   display: flex;
   flex-direction: column;
+  font-weight: var(--standard-font-weight);
 }
 
-.sign-up-btn {
-  background-color: var(--color-two);
-  color: var(--background-color-one);
-  width: 19rem;
-  border-radius: 6px;
-  cursor: pointer;
-  height: 2rem;
-  border: none;
-}
-
-.already-user {
-  font-size: 0.9rem;
+.option {
+  font-weight: var(--standard-font-weight);
 }
