--- a/src/frontend/components/filter/filter.css
+++ b/src/frontend/components/filter/filter.css
@@ -7,7 +7,6 @@
   position: fixed;
   left: 0;
   height: fit-content;
-  margin-top: 3rem;
   padding: 1rem;
   z-index: 3;
   font-weight: var(--standard-font-weight);
@@ -30,9 +29,10 @@ label,
   color: var(--background-color-one);
   border-radius: 6px;
   padding: 0.2rem;
+  cursor: pointer;
 }
 
-.filter_header {
+.filter-header {
   font-weight: bold;
   padding-bottom: 0.5rem;
   font-size: 1.2rem;
