--- a/src/frontend/components/footer/footer.css
+++ b/src/frontend/components/footer/footer.css
@@ -1,10 +1,11 @@
 .footer {
   position: absolute;
   height: fit-content;
-  width: 100%;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   column-gap: 3rem;
+  row-gap: 2rem;
   margin-top: 9rem;
   padding: 0.6rem;
   background-color: var(--border-color);
@@ -19,6 +20,7 @@ li {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
   font-weight: 500;
   margin: 0;
@@ -29,11 +31,11 @@ li {
 .address-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   padding-left: 0.5rem;
+  flex-wrap: wrap;
   width: 20%;
-  border-left: 1px solid grey;
+  border-left: 1px solid var(--background-color-two);
 }
 
 .footer-header {
