--- a/src/frontend/components/products/products.css
+++ b/src/frontend/components/products/products.css
@@ -4,7 +4,6 @@
   column-gap: 5rem;
   justify-content: center;
   row-gap: 3rem;
-  margin-top: 4rem;
   margin-left: 14rem;
 }
 
@@ -60,6 +59,7 @@ a {
   height: 1rem;
   width: 1rem;
   margin-left: auto;
+  cursor: pointer;
 }
 
 .red-color {
